@@ -1,3 +1,9 @@
+2011-09-11  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/socket.test:	[Bug 3390699]: Convert [testthread] use to
+	Thread package use in socket_*-13.1.  Eliminates a memory leak in
+	`make valgrind`.
+
 2011-09-10  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclOOMethod.c (InitEnsembleRewrite): [Bug 3400658]: Set the
